<resources>
    <string name="app_name">대동여지도</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="club">동아리</string>
    <string name="notice">공고</string>
    <string name="home">홈</string>
    <string name="alarm">알림</string>
    <string name="mypage">마이페이지</string>

    <string name="login_upper">LOGIN</string>
    <string name="login">Login</string>
    <string name="id">id</string>
    <string name="pw">password</string>

    <string name="patch">대동여지도 안드로이드가 완성되었습니다</string>
    <string name="name">이름</string>
    <string name="number">학번</string>
    <string name="mypage_club_history">동아리\n지원내역</string>
    <string name="mypage_bug">버그\n제보하기</string>
    <string name="logout">로그아웃</string>

    <string name="application">지원하기</string>
    <string name="notice_detail_major">모집 분야</string>
    <string name="notice_detail_period">모집 기간</string>
    <string name="notice_detail_howto">지원 방법</string>
    <string name="notice_detail_work">과제 안내</string>
    <string name="notice_detail_inquiry">문의</string>
    <string name="notice_detail_want">인재상</string>

    <string name="club_explain">동아리 소개</string>
    <string name="club_member">동아리원</string>
    <string name="club_qna">QnA</string>
    <string name="club_qna_quest">질문하기</string>

    <string name="interview_day">면접 일자</string>
    <string name="self_introduce">자기소개를 입력해주세요</string>
</resources>