<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature.notice.detail.NoticeDetailFragment">
    <data>
        <variable
            name="noticeTitle"
            type="String" />
        <variable
            name="noticeExplain"
            type="String" />
        <variable
            name="recruitPeriod"
            type="String" />
        <variable
            name="recruitHowto"
            type="String" />
        <variable
            name="work"
            type="String" />
        <variable
            name="weWant"
            type="String" />
        <variable
            name="inquiry"
            type="String" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/lay_top_fragment"
            android:paddingBottom="20dp">
            <ImageView
                android:id="@+id/iv_notice_detail_back"
                style="@style/left_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            
            <TextView
                android:id="@+id/tv_notice_detail_title"
                style="@style/text_notice_detail_title"
                android:text="@{noticeTitle}"
                android:textSize="27sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_notice_detail_back"/>
            <TextView
                android:id="@+id/tv_notice_detail_explain"
                style="@style/text_notice_detail_content"
                android:text="@{noticeExplain}"
                app:layout_constraintStart_toStartOf="@id/tv_notice_detail_title"
                app:layout_constraintTop_toBottomOf="@id/tv_notice_detail_title"/>

            <TextView
                android:id="@+id/tv_notice_detail_major"
                style="@style/text_notice_detail_title"
                android:text="@string/notice_detail_major"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_notice_detail_explain"/>
            <View
                style="@style/view_notice_detail_line"
                app:layout_constraintStart_toEndOf="@id/tv_notice_detail_major"
                app:layout_constraintTop_toTopOf="@id/tv_notice_detail_major"
                app:layout_constraintBottom_toBottomOf="@id/tv_notice_detail_major"/>
            <LinearLayout
                android:id="@+id/lay_notice_detail_major"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/tv_notice_detail_major"
                app:layout_constraintTop_toBottomOf="@id/tv_notice_detail_major"/>
            

            <TextView
                android:id="@+id/tv_notice_detail_period_title"
                style="@style/text_notice_detail_title"
                android:text="@string/notice_detail_period"
                app:layout_constraintStart_toStartOf="@id/tv_notice_detail_major"
                app:layout_constraintTop_toBottomOf="@id/lay_notice_detail_major"/>
            <View
                style="@style/view_notice_detail_line"
                app:layout_constraintStart_toEndOf="@id/tv_notice_detail_period_title"
                app:layout_constraintTop_toTopOf="@id/tv_notice_detail_period_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_notice_detail_period_title"/>
            <TextView
                android:id="@+id/tv_notice_detail_period_content"
                style="@style/text_notice_detail_content"
                android:text="@{recruitPeriod}"
                app:layout_constraintStart_toStartOf="@id/tv_notice_detail_period_title"
                app:layout_constraintTop_toBottomOf="@id/tv_notice_detail_period_title"/>

            <TextView
                android:id="@+id/tv_notice_detail_howto_title"
                style="@style/text_notice_detail_title"
                android:text="@string/notice_detail_howto"
                app:layout_constraintStart_toStartOf="@id/tv_notice_detail_period_title"
                app:layout_constraintTop_toBottomOf="@id/tv_notice_detail_period_content"/>
            <View
                style="@style/view_notice_detail_line"
                app:layout_constraintStart_toEndOf="@id/tv_notice_detail_howto_title"
                app:layout_constraintTop_toTopOf="@id/tv_notice_detail_howto_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_notice_detail_howto_title"/>
            <TextView
                android:id="@+id/tv_notice_detail_howto_content"
                style="@style/text_notice_detail_content"
                android:text="@{recruitHowto}"
                app:layout_constraintStart_toStartOf="@id/tv_notice_detail_howto_title"
                app:layout_constraintTop_toBottomOf="@id/tv_notice_detail_howto_title"/>

            <TextView
                android:id="@+id/tv_notice_detail_work_title"
                style="@style/text_notice_detail_title"
                android:text="@string/notice_detail_work"
                app:layout_constraintStart_toStartOf="@id/tv_notice_detail_howto_title"
                app:layout_constraintTop_toBottomOf="@id/tv_notice_detail_howto_content"/>
            <View
                style="@style/view_notice_detail_line"
                app:layout_constraintStart_toEndOf="@id/tv_notice_detail_work_title"
                app:layout_constraintTop_toTopOf="@id/tv_notice_detail_work_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_notice_detail_work_title"/>
<!--            <LinearLayout-->
<!--                android:id="@+id/lay_notice_detail_work"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="vertical"-->
<!--                app:layout_constraintStart_toStartOf="@id/tv_notice_detail_work"-->
<!--                app:layout_constraintTop_toBottomOf="@id/tv_notice_detail_work"/>-->
            <TextView
                android:id="@+id/tv_notice_detail_work_content"
                style="@style/text_notice_detail_content"
                android:text="@{work}"
                app:layout_constraintStart_toStartOf="@id/tv_notice_detail_work_title"
                app:layout_constraintTop_toBottomOf="@id/tv_notice_detail_work_title"/>

            <TextView
                android:id="@+id/tv_notice_detail_want_title"
                style="@style/text_notice_detail_title"
                android:text="@string/notice_detail_want"
                app:layout_constraintStart_toStartOf="@id/tv_notice_detail_work_title"
                app:layout_constraintTop_toBottomOf="@id/tv_notice_detail_work_content"/>
            <View
                style="@style/view_notice_detail_line"
                app:layout_constraintStart_toEndOf="@id/tv_notice_detail_want_title"
                app:layout_constraintTop_toTopOf="@id/tv_notice_detail_want_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_notice_detail_want_title"/>
            <TextView
                android:id="@+id/tv_notice_detail_want_content"
                style="@style/text_notice_detail_content"
                android:text="@{weWant}"
                app:layout_constraintStart_toStartOf="@id/tv_notice_detail_want_title"
                app:layout_constraintTop_toBottomOf="@id/tv_notice_detail_want_title"/>

            <TextView
                android:id="@+id/tv_notice_detail_inquiry_title"
                style="@style/text_notice_detail_title"
                android:text="@string/notice_detail_inquiry"
                app:layout_constraintStart_toStartOf="@id/tv_notice_detail_want_title"
                app:layout_constraintTop_toBottomOf="@id/tv_notice_detail_want_content"/>
            <View
                style="@style/view_notice_detail_line"
                app:layout_constraintStart_toEndOf="@id/tv_notice_detail_inquiry_title"
                app:layout_constraintTop_toTopOf="@id/tv_notice_detail_inquiry_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_notice_detail_inquiry_title"/>
            <TextView
                android:id="@+id/tv_notice_detail_inquiry_content"
                style="@style/text_notice_detail_content"
                android:text="@{inquiry}"
                app:layout_constraintStart_toStartOf="@id/tv_notice_detail_inquiry_title"
                app:layout_constraintTop_toBottomOf="@id/tv_notice_detail_inquiry_title"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_notice_detail_apply"
                style="@style/btn"
                android:text="@string/application"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_notice_detail_inquiry_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>